[package]
name = "ie2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
toml = "0.7.3"
serde = { version = "1.0.159", features = ["derive"] }
clap = { version = "4.2.1", features = ["derive"] }
console = "0.15.5"
dlopen = "0.1.8"
dlopen_derive = "0.1.4"
